--- a/style.css
+++ b/style.css
@@ -1312,6 +1312,7 @@ a:hover {
 	font-size: 20px;
 	position: relative;
 	border: none; /* not sure */
+	border-radius: 0;
 }
 
 .not-active {
@@ -1330,6 +1331,41 @@ a:hover {
 	top: -6px;
 	left: -6px;
 	border: 2px solid #0a2128;
+}
+
+/*.submit-after:after {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	content: '';
+	top: -6px;
+	left: -6px;
+	border: 2px solid #53b0ca;
+}*/
+
+input[type="submit"].submit {
+	padding: 7px 24px;
+	margin: 6px 1em;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
+	display: inline-block;
+	font-size: 20px;
+	position: relative;
+	border: none; /* not sure */
+	border-radius: 0;
+	background-color: white;
+	text-transform: uppercase;
+	border: 2px solid #53b0ca;
+}
+
+input[type="submit"].submit:hover {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.submit-holder {
+	display: inline-block;
 }
 
 .image-bg .button:after {
@@ -2161,6 +2197,22 @@ SPLIT PHOTO/TEXT
 	box-shadow: 0px 0px 5px 0px rgba(10,33,40,0.5);
 }
 
+@media screen and (max-width: 1100px) {
+
+	.split-pic {
+		flex-basis: 35%;
+	}
+
+	.split-text {
+		flex-basis: 65%;
+	}
+
+}
+
+@media screen and (max-width: 900px) {
+
+}
+
 /*
 -----------------------------------
 OUR COMMUNITY
@@ -2240,7 +2292,11 @@ PARTNERS HOME
 }
 
 .partners-home .flex.holder {
-	margin-top: 4em;
+	margin-top: 4em;	
+}
+
+.partners-home .flex.holder .flex {
+	align-items: center;
 }
 
 .partners-home h3 {
@@ -2315,6 +2371,15 @@ footer .sub-footer {
 	padding: 8px 0;
 }
 
+footer .subscribe {
+	padding-top: 1.5em;
+	border-top: 1px solid white;
+}
+
+footer .subscribe input.email {
+	border-radius: 0;
+	text-align: center;
+}
 
 
 
