--- a/style.css
+++ b/style.css
@@ -659,6 +659,20 @@ header.site-header .logo {
 
 
 
+.fixed-spacer {
+	height: 79px;
+}
+
+@media screen and (max-width: 1150px) {
+
+	.fixed-spacer {
+		height: 69px;
+	}
+
+}
+
+
+
 @media screen and (max-width: 1150px) {
 	.main-navigation li {
 		margin-left: 1.5em;
@@ -1125,9 +1139,16 @@ Pioneer Blue: #53b0ca;
 @media screen and (max-width: 920px) {
 	
 	.flex-1-of-4,
-	.flex-1-of-5 {
+	.flex-1-of-5,
+	.flex-2-of-5,
+	.flex-3-of-5 {
 		flex-basis: 45%;
 	} 
+
+	.flex-3-of-4,
+	.flex-4-of-5 {
+		flex-basis: 100%;
+	}
 
 }
 
@@ -1136,7 +1157,12 @@ Pioneer Blue: #53b0ca;
 	.flex-1-of-2,
 	.flex-1-of-3,
 	.flex-1-of-4,
-	.flex-1-of-5 {
+	.flex-1-of-5,
+	.flex-2-of-3,
+	.flex-2-of-5,
+	.flex-3-of-4,
+	.flex-3-of-5,
+	.flex-4-of-5 {
 		flex-basis: initial;
 	}
 
@@ -1227,6 +1253,14 @@ Pioneer Blue: #53b0ca;
 	border-color: white;
 }
 
+@media screen and (max-width: 920px) {
+	
+	.container.section-border > h1 {
+		margin-bottom: .25em;
+	}
+
+}
+
 @media screen and (max-width: 768px) {
 
 	.container.section-border > h1:before {
@@ -1235,6 +1269,10 @@ Pioneer Blue: #53b0ca;
 
 	.container.section-border {
 		padding: 0 36px 18px;
+	}
+
+	.container > h1 {
+		text-align: left;
 	}
 
 }
@@ -1508,6 +1546,7 @@ figcaption p:first-of-type {
 		right: 0;
 		left: -10px;
 	}
+
 }
 
 /* END IMAGE PULLQUOTES */
@@ -1776,7 +1815,34 @@ figure.image-pullquote.flex-1-of-2.list-heading figcaption {
 		padding-right: 0;
 	}
 
+	.table-list .image-pullquote img {
+		max-height: 200px;
+		width: auto;
+	}
+
+	.table-list .image-pullquote.flex-1-of-2 {
+		flex-basis: 100%;
+		text-align: left;
+	}
+
+	.table-list .image-pullquote.flex-1-of-2.list-heading:after {
+		border: none !important;
+	} 
+
+	.table-list .flex-1-of-2.list-info {
+		flex-basis: 100%;
+	}
+
+	.table-list .cta {
+		text-align: left;
+	}
+
+	.table-list .list-info.flex-1-of-2:last-of-type {
+		margin-bottom: 2em;
+	}
+
 }
+
 
 /* END TABLE LIST */
 /* BEGIN FEATURE ICONS */
@@ -1840,6 +1906,18 @@ figure.image-pullquote.flex-1-of-2.list-heading figcaption {
 	margin-bottom: 0;
 }
 
+@media screen and (max-width: 920px) {
+
+	.feature-icons .feature-icon {
+		margin: 18px 0;
+	}
+
+	.feature-icons h1 {
+		text-align: center;
+	}
+
+}
+
 @media screen and (max-width: 768px) {
 	
 	.feature-icons .flex-1-of-3 {
@@ -1850,9 +1928,11 @@ figure.image-pullquote.flex-1-of-2.list-heading figcaption {
 
 @media screen and (max-width: 600px) {
 	
+
+
 	.feature-icons .flex-1-of-3 {
 		flex-basis: initial;
-		width: 300px;
+		width: 350px;
 	}
 
 }
@@ -1989,6 +2069,15 @@ PROGRAM HERO
 	font-weight: bold;
 }
 
+@media screen and (max-width: 920px) {
+
+	.program-hero .container {
+		padding-top: 40px;
+		padding-bottom: 40px;
+	}
+
+}
+
 /*
 -----------------------------------
 PROGRAM DETAILS
@@ -2003,6 +2092,10 @@ PROGRAM DETAILS
 	margin-bottom: 1em;
 }
 
+.program-details figure.flex-1-of-2:last-of-type {
+	margin-bottom: 0;
+}
+
 .program-details div.flex-1-of-2 {
 	padding-top: 2em;
 }
@@ -2011,11 +2104,41 @@ PROGRAM DETAILS
 	font-style: italic;
 }
 
+@media screen and (max-width: 920px) {
+
+	.program-details {
+		padding-top: 0px;
+	}
+
+	.program-details div.flex-1-of-2 {
+		padding-top: 1em;
+	}
+
+}
+
+@media screen and (max-width: 768px) {
+
+	.program-details div.flex-1-of-2 {
+		padding-top: 0em;
+	}
+
+	.program-details .second figure {
+		order: 1;
+	}
+
+	.program-details .second div {
+		order: 2;
+	}
+
+}
+
+
 /*
 -----------------------------------
 WHAT YOU'LL LEARN
 -----------------------------------
 */
+
 
 
 
@@ -2031,6 +2154,27 @@ PROGRAM STAFF
 
 .program-staff div.flex-3-of-5 {
 	padding-top: 1em;
+}
+
+@media screen and (max-width: 920px) {
+	
+	.program-staff div.flex-3-of-5 {
+		padding-top: 0em;
+		margin-bottom: 2em;
+	}
+
+}
+
+@media screen and (max-width: 768px) {
+
+	.program-staff .top {
+		order: 1;
+	}
+
+	.program-staff .bottom {
+		order: 2;
+	}
+	
 }
 
 /*
@@ -2152,9 +2296,7 @@ SPLIT PHOTO/TEXT
 	left: -20px;
 }
 
-.home-hero-1 .split-overlay {
-	margin-top: 100px;
-}
+
 
 .split-overlay.right {
 	left: initial;
@@ -2211,6 +2353,44 @@ SPLIT PHOTO/TEXT
 
 @media screen and (max-width: 900px) {
 
+	.split-pic {
+		flex-basis: 100%;
+		height: 200px;
+	}
+
+	.split-text {
+		flex-basis: 100%;
+		margin: 0 auto;
+		padding-top: 0;
+		padding-bottom: 6px;
+	}
+
+	.split-text .split-overlay {
+		padding: 18px;
+		left: 0;
+		margin-top: 0;
+		width: 90%;
+	    margin: 0 auto;
+	    top: -18px;
+	}
+
+	.split-text .split-overlay:after {
+		border: none;
+	}
+
+	.split-text .split-overlay h2 {
+		font-size: 24px;
+	}
+
+	.split-text .split-overlay h3 {
+		font-size: 20px;
+	}
+
+	.split-text .split-overlay .button {
+		padding-left: 18px;
+		padding-right: 18px;
+	}
+
 }
 
 /*
@@ -2223,15 +2403,13 @@ OUR COMMUNITY
 	font-weight: normal;
 }
 
-.our-community .split-text {
-	padding-top: 72px;
-}
-
 /*
 -----------------------------------
 HOME HERO
 -----------------------------------
 */
+
+
 
 .home-hero-1 h5 {
 	font-style: italic;
@@ -2246,6 +2424,10 @@ HOME HERO
 	font-weight: normal;
 	line-height: 1.3em;
 }
+
+
+
+
 
 /*
 -----------------------------------
@@ -2262,6 +2444,10 @@ INVOLVEMENT OPTIONS
 	text-align: center;
 }
 
+.involvement-options figure {
+	margin-bottom: 1em;
+}
+
 .involvement-options .button {
 	padding-left: 25px;
 	padding-right: 25px;
@@ -2275,6 +2461,34 @@ INVOLVEMENT OPTIONS
 
 .involvement-options p {
 	line-height: 1.3em;
+}
+
+@media screen and (max-width: 920px) {
+
+	.involvement-options .flex-1-of-4 {
+		margin-bottom: 2em;
+	}
+
+}
+
+@media screen and (max-width: 768px) {
+
+	.involvement-options h3 {
+		text-align: left;
+	}
+
+	.involvement-options h2 {
+		margin-bottom: 0em;
+	}
+
+	.involvement-options p {
+		margin: .5em 0;
+	}
+
+	.involvement-options figure {
+		margin-bottom: .5em;
+	}
+
 }
 
 /*
@@ -2308,6 +2522,63 @@ PARTNERS HOME
 	margin-top: 0;
 }
 
+@media screen and (max-width: 920px) {
+
+	.partners-home .flex.holder .flex {
+		margin-bottom: 2em;
+	}
+
+	.partners-home .flex.holder > .flex-1-of-2 {
+		flex-basis: 100%;
+	}
+
+	.partners-home .flex.holder .partner-logo:nth-child(n+6) {
+		display: none;
+	}
+
+}
+
+@media screen and (max-width: 768px) {
+
+	.partners-home  p {
+		text-align: left;
+	}
+
+	.partners-home .flex.holder {
+		margin-top: 2em;
+	}
+
+	.partners-home .flex.holder .flex-1-of-3 {
+		flex-basis: 26.666%;
+	}
+
+	.partners-home .byline {
+		margin-bottom: 2em;
+	}
+
+	.partners-home .byline:last-child {
+		margin-bottom: 0;
+	}
+
+}
+
+/*
+-----------------------------------
+FOR COMPANIES HOME
+-----------------------------------
+*/
+
+@media screen and (max-width: 768px) {
+	.for-companies .flex-3-of-5 {
+		margin-bottom: 2em;
+	}
+
+	.for-companies .byline:last-child {
+		margin-bottom: 0;
+	}
+}
+
+
 /*
 -----------------------------------
 TESTIMONIALS HOME
@@ -2321,6 +2592,26 @@ TESTIMONIALS HOME
 
 .testimonials-home .list-info.flex-1-of-2 {
     padding: 40px 0;
+}
+
+@media screen and (max-width: 768px) {
+
+	.testimonials-home h1 {
+		margin-bottom: 0em;
+	}
+
+	.testimonials-home .list-info.flex-1-of-2 {
+		padding: 1em 0;
+	}
+
+	.testimonials-home .list-info.flex-1-of-2 h3 {
+		margin-bottom: .5em;
+	}
+
+	.testimonials-home figure.image-pullquote.flex-1-of-2.list-heading:last-of-type {
+		margin-bottom: 0;
+	}
+
 }
 
 /*
@@ -2381,7 +2672,19 @@ footer .subscribe input.email {
 	text-align: center;
 }
 
+@media screen and (max-width: 768px) {
 
+	footer .left {
+		padding-bottom: 1.5em;
+		border-bottom: 1px solid white;
+		margin-bottom: 1.5em;
+	}
+
+	footer .sub-footer {
+		text-align: left;
+	}
+
+}
 
 
 
