--- a/style.css
+++ b/style.css
@@ -1370,6 +1370,7 @@ a:hover {
 	top: -6px;
 	left: -6px;
 	border: 2px solid #0a2128;
+	transition: 0.15s;
 }
 
 /*.submit-after:after {
@@ -1413,8 +1414,7 @@ input[type="submit"].submit:hover {
 }
 
 .button:hover {
-	top: -3px;
-	left: -3px;
+	
 	cursor: pointer;
 	border-bottom: 0;
 }
