--- a/style.css
+++ b/style.css
@@ -2962,9 +2962,34 @@ SUB NAV - LAUNCH
 	font-weight: bold;
 }
 
+/*
+-----------------------------------
+LAUNCH PICKER / HERO
+-----------------------------------
+*/
 
 
+.launch-picker .filter {
+	background-color: rgba(0, 0, 0, 0.8);
+}
 
+.launch-picker .container {
+	padding: 75px 0;
+	max-width: 900px;
+	margin: 0 auto;
+}
 
+.launch-picker .flex-1-of-2 {
+	text-align: center;
+}
 
+.launch-picker .flex-1-of-2 h3 {
+	margin-bottom: .25em;
+	margin-top: 1.25em;
+}
+
+.launch-picker .button,
+.launch-picker .button:visited {
+	margin: .5em 2em;
+}
 
