--- a/style.css
+++ b/style.css
@@ -2955,11 +2955,19 @@ SUB NAV - LAUNCH
 -----------------------------------
 */
 
-.launch-nav .launch-branding a {
+.launch-nav .launch-branding a,
+.launch-academy-nav .launch-branding a,
+.launch-fellowship-nav .launch-branding a {
 	font-size: 26px;
 	border-bottom: none;
 	text-transform: uppercase;
 	font-weight: bold;
+}
+
+.launch-branding .subheading {
+	font-size: 26px;
+	font-weight: bold;
+	color: white;
 }
 
 /*
@@ -2991,5 +2999,172 @@ LAUNCH PICKER / HERO
 .launch-picker .button,
 .launch-picker .button:visited {
 	margin: .5em 2em;
+}
+
+/*
+-----------------------------------
+LAUNCH CATEGORY HERO
+-----------------------------------
+*/
+
+.launch-category-hero .filter {
+	background-color: rgba(0,0,0,0.8);
+}
+
+.launch-category-hero .container .intro {
+	max-width: 600px;
+	text-align: left;
+	padding: 75px 0;
+}
+
+/*
+-----------------------------------
+LAUNCH DETAILS
+-----------------------------------
+*/
+
+.launch-details .flex {
+	margin-top: 36px;
+}
+
+.launch-details .flex-1-of-2 {
+	margin-bottom: 2em;
+}
+
+
+/*
+-----------------------------------
+LAUNCH PARTNERS
+-----------------------------------
+*/
+
+.partners-launch .flex {
+	align-items: center;
+}
+
+/*
+-----------------------------------
+LAUNCH PARTNERS
+-----------------------------------
+*/
+
+.launch-more .tracks ul {
+	padding: 0;
+	margin: 0;
+}
+
+.launch-more .launch-class, .launch-more .launch-class:visited {
+    padding: 12px 40px 15px 40px;
+    margin: .5em 2em .5em 0;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: inline-block;
+    font-size: 20px;
+    position: relative;
+    border: none;
+    border-radius: 0;
+    border-bottom-width: 0 !important;
+    background-color: white;
+}
+
+.launch-more .launch-class a, .launch-more .launch-class:visited a {
+	color: #0a2128;
+}
+
+.launch-more .launch-class:hover {
+    cursor: pointer;
+    border-bottom: 0;
+}
+
+.launch-more .launch-class:after {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    content: '';
+    top: -6px;
+    left: -6px;
+    border: 2px solid #0a2128;
+    transition: 0.15s;
+}
+
+.launch-more .launch-class:hover:after {
+    top: 0px;
+    left: 0px;
+}
+
+/*
+-----------------------------------
+LAUNCH COMPARISON
+-----------------------------------
+*/
+
+.program-comparison .check, 
+.program-comparison .x {
+    width: 30px;
+    height: auto;
+}
+
+.program-comparison .logo {
+    max-height: 80px;
+    max-width: 180px;
+    height: auto;
+    width: auto;
+}
+
+
+
+/*
+-----------------------------------
+LAUNCH BOOTCAMP PAYMENT OPTIONS
+-----------------------------------
+*/
+
+.launch-fellowship-payment-options .flex-1-of-2 {
+	padding: 36px;
+}
+
+.launch-fellowship-payment-options .title {
+	text-align: center;
+}
+
+.launch-fellowship-payment-options h3 {
+	margin-bottom: 7px;
+}
+
+.launch-fellowship-payment-options .subheading {
+	font-weight: 300;
+	font-style: italic;
+}
+
+.launch-fellowship-payment-options ul {
+	margin-left: 0;
+	line-height: 1.3em;
+}
+
+.launch-fellowship-payment-options .signup-wrapper {
+	text-align: center;
+}
+
+/*
+-----------------------------------
+LAUNCH SINGLE TRACK HERO
+-----------------------------------
+*/
+
+.launch-track-hero .intro {
+	padding: 75px 0;
+	text-align: left;
+	max-width: 600px;
+}
+
+/*
+-----------------------------------
+LAUNCH SINGLE PARTNERS
+-----------------------------------
+*/
+
+.launch-partners .flex {
+	align-items: center;
 }
 
